--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="app_name">Easy Password Generator</string>
 
+    <string name="preset_password_generation_card_title">Einstellungen</string>
+
     <string name="activity_preset_password_generation_title">Vorlagen-Passwort</string>
     <string name="activity_preset_password_generation_password_type">Art des Passworts</string>
     <string name="activity_preset_password_generation_password_length">Länge des Passworts</string>
