--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,8 +222,8 @@
     <string name="rate_dialog_no">Never</string>
 
     <!-- shared pref file names -->
-    <string name="shared_pref_file_custom_password" translatable="false">de.framersoft.easypasswordgenerator.custom_password_generation</string>
-    <string name="shared_pref_file_preset_password" translatable="false">de.framersoft.easypasswordgenerator.preset_password_generation</string>
+    <string name="shared_pref_file_custom_password" translatable="false">de.framersoft.easypasswordgen.custom_password_generation</string>
+    <string name="shared_pref_file_preset_password" translatable="false">de.framersoft.easypasswordgen.preset_password_generation</string>
 
     <!-- shared pref file keys -->
     <string name="shared_pref_key_general_password_length" translatable="false">password_length</string>
